# low-latency-crypto-areion

./: CMakeLists.txt  LICENSE.txt  README.md
AVX2/: areion-aesni-parallel.h  impl-AVX2.c  opp-256.c  opp-512.c
AVX512F-VL-DQ-VAES/: mem-256.s  mem-512.s  opp-256.c  opp-512.c
baseline/: impl-baseline.c  opp-256.c  opp-512.c
benchmark/: areion-benchmark.c  cycle.h  perf.c  perf.h
include/: areion.h
include/private/: areion-aesni.h  areion-const.h  areion-neon.h  areion-private.h
ref/: areion.c  dm.c  impl-ref.c  impl-ref.h  md.c  opp-256.c  opp-512.c
test/: areion-test.c  ref-compare-test.c
